# server.js
@@ -4,7 +4,8 @@ const app = express();
 const port = process.env.PORT || 3000;
 const { connectDb } = require('./db/connection');
 const nameRouter = require('./routes/index');
-const contactsRouter = require('./routes/contacts');
+const sessionsRouter = require('./routes/sessions');
+const gamesRouter = require('./routes/games');
 
 // Enable CORS. Allows requests from any origin. Allows resources on my server to be requested.
 //allow all origins, allow post/get, allow content-type
@@ -20,8 +21,9 @@ app.use((req, res, next) => {
 app.use(express.json());
 
 app.use('/', nameRouter);
-// sends requests with /contacts to routes/contacts.js
-app.use('/contacts', contactsRouter);
+// sends requests with /sessions and /games to routes/sessions or routes/games.js
+app.use('/sessions', sessionsRouter);
+app.use('/games', gamesRouter);
 
 // server starts when db is connected
 connectDb().then(() => {
