# swagger.json
@@ -1,11 +1,11 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "My API",
-    "description": "Description",
+    "title": "Gaming Session Planner",
+    "description": "Plan video gaming sessions",
     "version": "1.0.0"
   },
-  "host": "cse341-80ip.onrender.com",
+  "host": "cse-341-project-2-2548.onrender.com",
   "basePath": "/",
   "schemes": [
     "https"
@@ -21,7 +21,7 @@
         }
       }
     },
-    "/contacts/": {
+    "/sessions/": {
       "get": {
         "description": "",
         "responses": {
@@ -39,19 +39,34 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "userId": {
                   "example": "any"
                 },
-                "lastName": {
+                "gameId": {
                   "example": "any"
                 },
-                "email": {
+                "date": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "startTime": {
                   "example": "any"
                 },
-                "birthday": {
+                "duration": {
+                  "example": "any"
+                },
+                "players": {
+                  "example": "any"
+                },
+                "mode": {
+                  "example": "any"
+                },
+                "platform": {
+                  "example": "any"
+                },
+                "notes": {
+                  "example": "any"
+                },
+                "status": {
                   "example": "any"
                 }
               }
@@ -71,7 +86,7 @@
         }
       }
     },
-    "/contacts/{id}": {
+    "/sessions/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -109,19 +124,318 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "userId": {
                   "example": "any"
                 },
-                "lastName": {
+                "gameId": {
                   "example": "any"
                 },
-                "email": {
+                "date": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "startTime": {
                   "example": "any"
                 },
-                "birthday": {
+                "duration": {
+                  "example": "any"
+                },
+                "players": {
+                  "example": "any"
+                },
+                "mode": {
+                  "example": "any"
+                },
+                "platform": {
+                  "example": "any"
+                },
+                "notes": {
+                  "example": "any"
+                },
+                "status": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/games/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "platform": {
+                  "example": "any"
+                },
+                "genre": {
+                  "example": "any"
+                },
+                "multiplayer": {
+                  "example": "any"
+                },
+                "developer": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/games/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "platform": {
+                  "example": "any"
+                },
+                "genre": {
+                  "example": "any"
+                },
+                "multiplayer": {
+                  "example": "any"
+                },
+                "developer": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "platform": {
+                  "example": "any"
+                },
+                "genre": {
+                  "example": "any"
+                },
+                "multiplayer": {
+                  "example": "any"
+                },
+                "developer": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "platform": {
+                  "example": "any"
+                },
+                "genre": {
+                  "example": "any"
+                },
+                "multiplayer": {
+                  "example": "any"
+                },
+                "developer": {
                   "example": "any"
                 }
               }
